# Analitika-Viteka

./: Loool.xlsx  README.md  analiz_tk.spec  analiz_tk_win.spec  config.example.json  config.json  main.py  migrate_config.py  pyproject.toml  result.xlsx
.github/workflows/: build.yml
analiz_tk__old/: .gitignore  main.py  pattern.xlsx  requirements.txt
analiz_tk__old/excel/: energe.xlsx  glavdostavka.xlsx  gtd.xlsx  viteka.xlsx
analiz_tk__old/src/: analitica.py  file.py  untitled.ui
analiz_tk__old/src/json/: city.json  data.json
src/: __init__.py  excel_processor.py  gui.py  models.py  output_generator.py
