[project]
name = "analiz-tk"
version = "2.0.0"
description = "Сервис для анализа цен конкурентов из Excel файлов"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
    "PySide6>=6.6.0",
    "thefuzz>=0.22.0",
    "python-Levenshtein>=0.25.0",
]

[project.scripts]
analiz-tk = "src.gui:main"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0",
]

[tool.scripts]
build = "pyinstaller analiz_tk.spec --clean --noconfirm"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
